<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_composable_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maxime.clement@tier4.jp">mclement</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>test_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
